adding new json data files
names.json and races.json added, also fixed one line in cli.js

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,8 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+data/firstnames.json
+data/lastnames.json
+csvToJSON.py
+csvToJSON.py
+csvToJSON.py
