--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dndler",
   "version": "0.0.1",
   "description": "tool for creating improvized game materials for dungeons & dragons",
-  "main": "src/js/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
