--- a/package.json
+++ b/package.json
@@ -1,54 +1,38 @@
 {
   "name": "dndler",
-<<<<<<< HEAD
   "version": "0.0.1",
   "description": "tool for creating improvized game materials for dungeons & dragons",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-=======
-  "version": "1.0.0",
-  "description": "THIS IS THE DINDLER ",
-  "type": "module",
-  "main": "./src/cli.js",
+  "main": "./src/index.js",
   "scripts": {
     "build": "babel generateAll.js -d dist",
     "start": "npm run build && node dist/generateAll.js",
     "test": "jest",
     "watch": "jest --watch"
->>>>>>> main
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vanadgir/dndler.git"
   },
   "keywords": [
-<<<<<<< HEAD
-    "games"
-  ],
-  "author": "Varun Nadgir, Tyler Brandt",
-=======
     "dnd",
     "ttrpg",
     "dindl",
     "mins",
-    "generator"
+    "generator",
+    "games"
   ],
   "author": "Varun Nadgir, Tyler Brandt, Graham Gilpatric",
->>>>>>> main
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vanadgir/dndler/issues"
   },
   "homepage": "https://github.com/vanadgir/dndler#readme",
   "dependencies": {
-<<<<<<< HEAD
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
     "joi": "^17.5.0",
+    "jquery-csv": "^1.0.21",
     "parcel-bundler": "~1.12.5"
-=======
-    "jquery-csv": "^1.0.21"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
@@ -56,6 +40,5 @@
     "@babel/preset-env": "^7.16.8",
     "jest": "^27.4.7",
     "lodash": "^4.17.21"
->>>>>>> main
   }
 }
