--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-validator": "^6.14.0",
-    "joi": "^17.5.0",
-    "jquery-csv": "^1.0.21",
-    "parcel-bundler": "~1.12.5"
+    "joi": "^17.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.8",
