--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "tool for creating improvized game materials for dungeons & dragons",
   "main": "./src/server/index.js",
   "scripts": {
-    "build": "babel generateAll.js -d dist",
     "start": "node -r esm ./src/server/index.js",
-    "devstart": "nodemon -r esm ./src/server/index.js",
-    "clistart": "nodemon -r esm ./src/server/cli.js",
+    "dev": "nodemon -r esm ./src/server/index.js",
+    "cli": "nodemon -r esm ./src/server/cli.js",
     "test": "jest",
     "watch": "jest --watch"
   },
@@ -32,7 +31,7 @@
   "dependencies": {
     "babel-plugin-lodash": "^3.3.4",
     "esm": "^3.2.25",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "joi": "^17.5.0",
     "lodash": "^4.17.21"
@@ -42,6 +41,7 @@
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^27.4.6",
     "jest": "^27.4.7",
-    "nodemon": "~2.0.15"
-  }
+    "nodemon": "^2.0.15"
+  },
+  "packageManager": "yarn@3.1.1"
 }
