--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v2
-      - name: Install dependencies 
-        run: npm install
+      - name: Install dependencies
+        run: yarn install --immutable --immutable-cache --check-cache
       - name: Run test suite
-        run: npm run test
+        run: yarn test
