--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.1",
   "description": "tool for creating improvized game materials for dungeons & dragons",
   "main": "./src/server/index.js",
+  "type": "module",
   "scripts": {
-    "start": "node -r esm ./src/server/index.js",
-    "dev": "nodemon -r esm ./src/server/index.js",
-    "cli": "nodemon -r esm ./src/server/cli.js",
+    "start": "node ./src/server/index.js",
+    "dev": "nodemon ./src/server/index.js",
+    "cli": "nodemon ./src/server/cli.js",
     "test": "jest",
     "watch": "jest --watch"
   },
@@ -30,6 +31,7 @@
   "homepage": "https://github.com/vanadgir/dndler#readme",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.4",
+    "body-parser": "^1.19.1",
     "esm": "^3.2.25",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
