--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node ./src/server/index.js",
     "dev": "nodemon ./src/server/index.js",
-    "cli": "nodemon ./src/server/cli.js",
+    "cli": "node ./src/server/cli.js",
+    "clidev": "nodemon ./src/server/cli.js",
     "test": "jest",
     "watch": "jest --watch"
   },
@@ -32,7 +33,6 @@
   "dependencies": {
     "babel-plugin-lodash": "^3.3.4",
     "body-parser": "^1.19.1",
-    "esm": "^3.2.25",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "joi": "^17.5.0",
