workspaces as modules for ES6 imports

--- a/src/client/package.json
+++ b/src/client/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/vanadgir/dndler/",
   "author": "Varun Nadgir, Tyler Brandt, Graham Gilpatric",
   "license": "MIT",
+  "type": "module",
   "dependencies": 
   {
     "server": "workspace:server",
