--- a/src/server/package.json
+++ b/src/server/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/vanadgir/dndler/",
   "author": "Varun Nadgir, Tyler Brandt, Graham Gilpatric",
   "license": "MIT",
+  "type": "module",
   "dependencies":
   {
     "body-parser": "^1.19.1",
