--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "type": "git",
     "url": "git+https://github.com/vanadgir/dndler.git"
   },
+  "workspaces": [
+    "src/client",
+    "src/data",
+    "src/server"
+  ],
   "keywords": [
     "dnd",
     "ttrpg",
@@ -32,10 +37,6 @@
   "homepage": "https://github.com/vanadgir/dndler#readme",
   "dependencies": {
     "babel-plugin-lodash": "^3.3.4",
-    "body-parser": "^1.19.1",
-    "express": "^4.17.2",
-    "express-validator": "^6.14.0",
-    "joi": "^17.5.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
